scripts/slurm-1349578.out
/var/spool/slurmd/job1349578/slurm_script: line 11: venvs/bin/activate: No such file or directory
  File "install.py", line 11
    $ pip install torch==1.9.1+cu111 torchvision==0.10.1+cu111 torchaudio==0.9.1 -f https://download.pytorch.org/whl/torch_stable.html
    ^
SyntaxError: invalid syntax
